# ballbot_mpc_nav

./: CMakeLists.txt  README.md  package.xml
include/ballbot_mpc_nav/: ballbot_dynamics.h  ballbot_mpc.h  drone_dynamics.h  tumbller_dynamics.h
launch/: ballbot_mpc.launch
msg/: DroneState.msg
rosbag/: 2020-12-15-18-43-30.bag  read_bag.m  read_bag.m~
src/: ballbot_mpc.cpp  ballbot_mpc_node.cpp
